# duckietown-autocalibration

./: README.md
catkin_ws/: .ycm_extra_conf.py  launch.sh  remote.sh
catkin_ws/src/apriltags2_ros/apriltags2_ros/: CMakeLists.txt
catkin_ws/src/autocalib/: CMakeLists.txt  package.xml
catkin_ws/src/autocalib/launch/: autocalib.launch  track.launch
catkin_ws/src/autocalib/scripts/: autocalib.py  track.py
catkin_ws/src/duckietown_msgs/msg/: AprilTagDetection.msg
